# rusting-rocket-diesel

./: .gitignore  Cargo.toml  README.md  curl.sh  database.db  society.db
migrations/2023-05-02-163038_create_people/: down.sql  up.sql
migrations/2023-05-09-152523_create_students/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  routes.rs  schema.rs
src/models/: mod.rs
src/services/: routes.rs
