[package]
name = "rusting-rocket-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
rocket = "0.4.0"
serde = "1.0.160"
serde_json = "1.0"
rocket_codegen = "0.4.2"
serde_derive = "1.0"



[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]